--- a/myapp/templates/chatbot.html
+++ b/myapp/templates/chatbot.html
@@ -155,12 +155,6 @@
     {% for item in historial %}
       <div class="chat-message user">
         <div class="message">{{ item.pregunta }}</div>
-<<<<<<< Updated upstream
-        <img src="https://cdn-icons-png.flaticon.com/512/9131/9131546.png" alt="User">
-      </div>
-      <div class="chat-message bot">
-        <img src="https://cdn-icons-png.flaticon.com/512/4712/4712107.png" alt="Bot">
-=======
         {% if user.photo %}
           <img src="{{ user.photo.url }}" alt="User">
         {% else %}
@@ -169,7 +163,6 @@
       </div>
       <div class="chat-message bot">
         <img src="{% static 'images/chanchita.png' %}" alt="Bot">
->>>>>>> Stashed changes
         <div class="message">{{ item.respuesta }}</div>
       </div>
     {% endfor %}
@@ -202,7 +195,7 @@
     const typingMsg = document.createElement("div");
     typingMsg.className = "chat-message bot typing";
     typingMsg.innerHTML = `
-      <img src="https://cdn-icons-png.flaticon.com/512/4712/4712107.png" alt="Bot">
+      <img src="{% static 'images/chanchita.png' %}" alt="Bot">
       <div class="message loading">
         <span class="dot"></span><span class="dot"></span><span class="dot"></span>
       </div>
